--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,12 @@
 minecraft_version=1.21.1
-minecraft_version_range=[1.21.1,1.21.2)
+minecraft_version_range=[1.21.0,1.21.2)
 
 neo_version=21.1.71
 neo_version_range=[21.1.62,)
 loader_version_range=[4,)
+
+# recommended citresewn version
+citresewn_version=1.2.2
 
 mod_id=citresewn_neopatcher
 mod_name=CITResewnNeoPatcher
